2014-02-25  Julien Bect  <julien.bect@supelec.fr>

	Rename graphicstoolkit to stk_config_graphicstoolkit.

	* misc/mole/common/graphicstoolkit.m: removed
	* config/stk_config_graphicstoolkit.m: new function (formerly
	known as graphicstoolkit)
	* examples/03_miscellaneous/stk_example_misc02.m: modified

	Rename commonsize () to stk_commonsize ().

	* misc/mole/common/commonsize.m: renamed to...
	* utils/arrays/generic/stk_commonsize.m: ...this
	* misc/distrib/distrib_normal_cdf.m: modified
	* misc/distrib/distrib_normal_ei.m: modified
	* misc/distrib/distrib_normal_pdf.m: modified
	* misc/distrib/distrib_student_cdf.m: modified
	* misc/distrib/distrib_student_ei.m: modified
	* misc/distrib/distrib_student_pdf.m: modified
	* misc/mole/README: modified

	doc: update some help texts (script names have changed)

	* paramestim/stk_param_estim.m: fix doc
	* utils/stk_conditioning.m: fix doc
	* utils/stk_generate_samplepaths.m: fix doc

2014-02-24  Julien Bect  <julien.bect@supelec.fr>

	Rewrite Octave packaging script in Octave (instead of Python).

	* admin/make_octave_package.m: Translation to the Octave langage
	of make_octave_package.py . Version number now properly set in
	DESCRIPTION based on the one returned by stk_version ().
	* admin/make_octave_package.py: deleted

	Try to solve the problem with MEX-files in private directories.

	* stk_init.m: Build the MEX-files *before* adding STK's
	subdirectories to the path. Finger crossed.
	* stk_build.m: Don't test if MEX-files located in private
	directories are found (not at this point).
	* config/stk_config_testprivatemex.m: New function to test if
	MEX-files located in private directories are found.

	Add load/unload scripts for the MOLE.

	* misc/mole/PKG_ADD.m: New initialization script, that adds
	selected subdirectories of the MOLE to the path.
	* misc/mole/PKG_DEL.m: Remove MOLE subdirectories from the path.
	* config/stk_config_path.m: Remove the part that is now handled by