@@ -31,7 +31,7 @@ function stk_config_setup ()
 % Set default options
 stk_options_set;
 
-if ismatlab
+if ~ isoctave,
     % Check for presence of the Parallel Computing Toolbox
     fprintf ('Parallel Computing toolbox... ');
     pct_found = stk_parallel_haspct ();
